--- a/src/pages/LoginPage/styles.css
+++ b/src/pages/LoginPage/styles.css
@@ -14,6 +14,10 @@
     padding: 0.5rem;
 }
 
+#login .field {
+    padding-bottom: 0.5rem;
+}
+
 #login .field label {
     display: block;
 }
@@ -24,5 +28,8 @@
 
 #login .actions {
     text-align: center;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
 }
+
+
+
